# cgame

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  main.c
app/: terminal.c  terminal.h
domain/: Enemy.c  Enemy.h  Hero.c  Hero.h  Laser.c  Laser.h  World.c  World.h
src/: CMakeLists.txt  main.c
src/app/: terminal.c  terminal.h
src/domain/: Enemy.c  Enemy.h  Hero.c  Hero.h  Laser.c  Laser.h  World.c  World.h
test/: CMakeLists.txt  state.c
